--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +32495548883</p>
-<p>Email: hermanspjv@gmail.com</p>
+<p>Tel: +9584736251/p>
+<p>Email: mymail@gmail.com</p>
 <p>Address:</p>
 <p>
-	Bredestraat 49<br />
-	2930 Brasschaat<br />
+	My street<br />
+	City<br />
 	Belgium <br />
 </p>
